<resources>
<string name="app_name">OpenGPX</string>
<string name="app_desc">Paperless Geocaching application</string>
<string name="menu_sort_by_name">by Name</string>
<string name="menu_sort_by_distance">by Distance</string>
<string name="menu_show_info_file">Show Info File</string>
<string name="menu_sort">Sort</string>
<string name="menu_show_hint">Hint</string>
<string name="menu_show_inventory">Inventory</string>
<string name="menu_cache_detail_map">Map</string>
<string name="menu_tools">Tools</string>
<string name="menu_variables">Variables</string>
<string name="menu_show_spoiler">Spoiler</string>
<string name="menu_show_attributes">Attributes</string>
<string name="menu_about">About</string>
<string name="spinner_select_cmd_type">Select command type</string>
<string name="menu_database">Database</string>
<string name="menu_database_clear">Clear</string>
<string name="menu_database_info">Information</string>
<string name="about_comments">\nPaperless Geocaching application.\n© 2009 – 2012\nMartin Preishuber and Travis Tabbal</string>
<string name="menu_show_cache_map">Map</string>
<string name="menu_google_map_mode">Toggle Mode</string>
<string name="menu_google_toggle_satellite">Satellite View</string>
<string name="menu_google_toggle_traffic">Traffic View</string>
<string name="menu_google_toggle_street">Street View</string>
<string name="menu_database_select">Select</string>
<string name="menu_show_keyboard">Keyboard</string>
<string name="menu_upload_field_notes">Upload</string>
<string name="menu_delete_field_notes">Delete</string>
<string name="menu_exit">Exit</string>
<string name="menu_votes">Votes</string>
<string name="menu_add_waypoint">Add Waypoint</string>
<string name="dialog_add_waypoint">Add Waypoint to Cache</string>
<string name="latitude">Latitude:</string>
<string name="longtitude">Longtitude:</string>
<string name="save">Save</string>
<string name="cancel">Cancel</string>
<string name="name">Name:</string>
<string name="failed_parsing_coords">Unable to parse coordinates</string>
<string name="wp_already_exists">Waypoint already exists</string>
<string name="btn_command_clear">Clear</string>
<string name="btn_command_execute">Execute</string>
<string name="no_help_for_command_type">No help available for this command type …</string>
<string name="help_command_custom_functions">Custom functions</string>
<string name="help_command_calculate">lcm() - least common multiple\ngcd() - greatest common divisor</string>
<string name="no_text_entered">Please enter some text first.</string>
<string name="delete_udef_only">Only user defined waypoints can be deleted</string>
<string name="menu_search_bcaching">Search BCaching.com</string>
<string name="menu_search_online">Search Online</string>
<string name="menu_search_savetodb">Save Results To DB</string>
<string name="menu_search_clear">Clear Search Results</string>
<string name="menu_search_advanced">Advanced Search</string>
<string name="menu_search_by_distance">Find Near Me</string>
<string name="menu_search_by_name">Search By Name/GCID</string>
<string name="pref_osm_main_category">OpenStreetMap Preferences</string>
<string name="menu_preferences">Preferences</string>
<string name="about_credits_groundspeak">Groundspeak Geocaching Cache Type and Descriptive Icons Copyright 2008 Groundspeak Inc. Used with Permission. All Rights Reserved.</string>
<string name="about_credits_osmdroid">OpenStreetMap maps provided by osmdroid.</string>
<string name="about_credits_cloudmade">CloudMade OSM tiles provided by CloudMade.</string>
<string name="about_credits_db4o">Powered by db4objects.</string>
<string name="distance">Distance</string>
<string name="bearing">Bearing</string>
<string name="unable_enable_compass">Orientation sensor not available - compass not enabled</string>
<string name="vehicle">Vehicle</string>
<string name="pedestrian">Pedestrian</string>
<string name="navigation_mode">Navigation Mode</string>
<string name="button_ok">OK</string>
<string name="title_votes">Votes</string>
<string name="button_close">Close</string>
<string name="vote_average">Average:</string>
<string name="vote_median">(Median</string>
<string name="vote_total">Total:</string>
<string name="button_update">Update</string>
<string name="menu_database_update_votes">Update Votes</string>
<string name="welcome">Welcome</string>
<string name="welcome_cache_db_empty">The cache database is empty. To fill it, you have two possibilities:</string>
<string name="welcome_option_copy_files">1. Copy gpx files (geocaching files!) to the folder</string>
<string name="welcome_option_bcaching">2. Enter your bcaching.com credentials in preferences (Menu / Preferences) and search online for caches</string>
<string name="welcome_note_disable">Note: you can disable this dialog in preferences</string>
<string name="pref_import_path_list">Import path list</string>
<string name="pref_import_path_list_summary">List of additional folders containing gpx,zip files</string>
<string name="app_title">OpenGPX - You Are The Search Engine</string>
<string name="pref_home_coords">Home coordinates</string>
<string name="pref_home_coords_summary">Set or update your home coordinates</string>
<string name="pref_set_home_coords">Set home coordinates</string>
<string name="pref_set_home_coords_summary">Use this element to set your home coordintates from GPS</string>
<string name="pref_data_path">Data folder</string>
<string name="pref_data_path_summary">Folder containing gpx files, cache database and spoiler pics</string>
<string name="pref_screen_orientation">Screen orientation</string>
<string name="pref_screen_orientation_summary">Lock screen orientation to portrait or landscape</string>
<string name="pref_coord_format">Coordinate format</string>
<string name="pref_coord_format_summary">Set coordinate format to Decimal, DDD MM.MMM or DDD MM SS.SSS</string>
<string name="pref_map_provider">Map Provider</string>
<string name="pref_map_provider_summary">Choose Google or OpenStreetMap</string>
<string name="pref_osm_renderer">OSM Map Renderer</string>
<string name="pref_osm_renderer_summary">Select OSM Renderer (most common used renderer is Mapnik)</string>
<string name="pref_keep_screen_on">Keep screen on in map view</string>
<string name="pref_keep_screen_on_summary">Disables screen saver in map view</string>
<string name="pref_compass_provider">Compass Provider</string>
<string name="pref_compass_provider_summary">Used when using &quot;Compass&quot; context menu on waypoint</string>
<string name="pref_navigation_provider">Navigation Provider</string>
<string name="pref_navigation_provider_summary">Used when using &quot;Navigate&quot; context menu on waypoint</string>
<string name="pref_bc_max_caches_summary">Number of caches as search result</string>
<string name="pref_bc_max_caches">Max caches</string>
<string name="pref_bc_max_dist">Max distance</string>
<string name="pref_bc_max_dist_summary">Search within X miles around position</string>
<string name="pref_waypoint_action">Waypoint action</string>
<string name="pref_waypoint_action_desc">Action performed when clicking on a waypoint</string>
<string name="unknown">Unknown</string>
<string name="menu_field_notes">Field Notes</string>
<string name="database">Database</string>
<string name="cache_index_size">Cache index size</string>
<string name="cache_database_size">Cache database size</string>
<string name="cache_variables">Cache variables</string>
<string name="cache_votes">Cache votes</string>
<string name="field_notes">Field notes</string>
<string name="menu_show_field_notes">Show</string>
<string name="file_not_found">File not found.</string>
<string name="cache_list_reading_caches">Indexing / reading caches</string>
<string name="cache_list_please_wait">Please wait - this may take a while …</string>
<string name="cache_list_time">Time</string>
<string name="cache_list_indexing_result">Indexing results</string>
<string name="cache_list_successful">successful</string>
<string name="cache_list_failed">failed</string>
<string name="cache_desc_description">Description</string>
<string name="cache_desc_waypoints">Waypoints</string>
<string name="cache_desc_logs">Logs</string>
<string name="cache_desc_log_visit">Log Visit</string>
<string name="cache_desc_short_description">Short description</string>
<string name="cache_desc_long_description">Long description</string>
<string name="cache_detail_send_log">Send Log</string>
<string name="cache_detail_save_log">Save Log</string>
<string name="cache_detail_size">Size:</string>
<string name="cache_detail_difficulty">Difficulty:</string>
<string name="cache_detail_terrain">Terrain:</string>
<string name="tools_command">Command:</string>
<string name="tools_text">Text:</string>
<string name="tools_text_hint">Enter text</string>
<string name="tools_result">Result</string>
<string name="cache_desc_placed_by">Placed by</string>
<string name="cache_desc_distance_home">Distance (home)</string>
<string name="homepage_url">http://www.opengpx.org</string>
<string name="wp_detail_detail">Detail</string>
<string name="wp_detail_relative_info">Information relative to other waypoints</string>
<string name="cache_desc_personal_notes">Notes</string>
<string name="personal_notes">Personal notes</string>
<string name="personal_notes_saved">Personal notes saved to database</string>
<string name="placeholder_text">Text</string>
<string name="cache_icon">Cache Icon</string>
<string name="waypoint_icon">waypoint icon</string>
<string name="field_notes_deleted">Field notes deleted.</string>
<string name="field_note_saved">Field note saved to database.</string>
<string name="log_icon">Log icon</string>
<string name="no_field_notes">No field notes available</string>
<string name="no_caches_available">No caches available</string>
<string name="question">Question</string>
<string name="delete_cache_question">Do you really want to delete the cache \'%s\'?</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="cache_options">Cache Options</string>
<string name="delete_cache">Delete cache</string>
<string name="clear_database_question">Do you really want to clear the cache database?</string>
<string name="log_decrypted">Log (decrypted)</string>
<string name="waypoint">Waypoint</string>
<string name="hint">Hint</string>
<string name="information">Information</string>
<string name="no_hint_available">Sorry, no hint available.</string>
<string name="inventory">Inventory</string>
<string name="no_travelbugs_available">Sorry, there are no coins / travelbugs in this cache.</string>
<string name="delete">Delete</string>
<string name="waypoint_options">Waypoint Options</string>
<string name="pref_general">General</string>
<string name="pref_backup_gpx_file">Backup GPX files</string>
<string name="pref_backup_gpx_file_on">Backup gpx files to the ./backup folder</string>
<string name="pref_backup_gpx_file_off">Delete GPX files after importing</string>
<string name="pref_ui">User Interface</string>
<string name="pref_cache_filter_limit">Cache filter limit</string>
<string name="pref_cache_filter_limit_desc">Limits the number of shown caches</string>
<string name="pref_show_db_help">Display Help</string>
<string name="pref_show_db_help_desc">Display Help with empty database</string>
<string name="pref_unit_system">Unit System</string>
<string name="pref_unit_system_desc">Choose metric or imperial (requires restart)</string>
<string name="pref_auto_update_votes">Auto-update votes</string>
<string name="pref_auto_update_votes_on">Update GCVotes when indexing caches</string>
<string name="pref_auto_update_votes_off">Do not update GCVotes when indexing caches</string>
<string name="pref_maps">Maps</string>
<string name="pref_hide_caches_found">Hide caches found</string>
<string name="pref_hide_caches_found_on">Hide caches with \'Found it\' field note</string>
<string name="pref_hide_caches_found_off">Show all available caches in database</string>
</resources>