<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<ScrollView android:id="@+id/ScrollView01" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:padding="5dip"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_cache_db_empty"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_option_copy_files" android:layout_marginLeft="20dip"></TextView>
<TextView android:text="@+id/TextView02" android:layout_height="wrap_content" android:id="@+id/WelcomeGpxFolder" android:layout_width="fill_parent" android:gravity="center_horizontal" android:textColor="#ffffff"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_option_bcaching" android:layout_marginLeft="20dip"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_note_disable" android:textStyle="bold"></TextView>
</LinearLayout>
</ScrollView>
</LinearLayout>
