<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">

<TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal">
  <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal">
    <TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:layout_gravity="right|center_vertical" android:layout_margin="2px"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/EditWaypointName" android:layout_width="fill_parent" android:layout_margin="2px"></EditText>
  </TableRow>
  <TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal">
    <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/latitude" android:layout_gravity="right|center_vertical" android:layout_margin="2px"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/EditLatitude" android:layout_margin="2px"></EditText>
  </TableRow>
  <TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal">
    <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/longtitude" android:layout_gravity="right|center_vertical" android:layout_margin="2px"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/EditLongtitude" android:layout_width="fill_parent" android:layout_margin="2px"></EditText>
  </TableRow>
</TableLayout>
<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent" android:gravity="center">
    <Button android:text="@string/save" android:id="@+id/waypointsavebutton" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
    <Button android:text="@string/cancel" android:id="@+id/waypointcancelbutton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>

</LinearLayout>
