<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="fill_parent" 
	    android:layout_width="fill_parent" android:orientation="vertical" android:padding="2px">
	    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical">
	        <TextView 
	        	android:text="Command:" 
	            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	        <Spinner 
		        android:id="@+id/CommandType"
		        android:layout_height="wrap_content" 
		        android:layout_width="fill_parent" 
		        android:prompt="@string/spinner_select_cmd_type"/>
</LinearLayout>		        
	    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
	        <TextView 
	            android:text="Text:"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"/>
			<EditText
				android:id="@+id/CommandEntry"
		        android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
		       	android:background="@android:drawable/editbox_background" android:hint="Enter text"/>
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center">

    <Button
       	android:id="@+id/CalcButton"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content" android:text="@string/btn_command_execute" android:height="10px"/>
	    
	<Button 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:id="@+id/ClearButton" android:text="@string/btn_command_clear" android:height="10px"/>
	<Button android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:id="@+id/CommandHelpButton" 
		android:drawableLeft="@android:drawable/ic_menu_help" android:height="10px"/>
</LinearLayout>
	<TextView 
		android:layout_height="wrap_content" 
	   	android:id="@+id/CalcResultHeader" 
	   	android:text="Result" 
	   	android:layout_width="fill_parent" 
	   	android:textSize="12px" 
	    android:background="#c8c8c8" 
	    android:textColor="#000000" android:gravity="center_horizontal" android:layout_below="@+id/CalcButton" android:layout_marginTop="3px"/>
	<ScrollView
		android:layout_height="fill_parent" 
	   	android:layout_width="fill_parent" 
	   	android:layout_below="@+id/CalcResultHeader">
		<TextView
			android:layout_height="fill_parent" 
		   	android:id="@+id/CommandResult" 
		   	android:layout_width="fill_parent" />
	</ScrollView>
    </LinearLayout>
